Updated password prompt error, and send trx

--- a/App.config
+++ b/App.config
@@ -28,6 +28,9 @@
             <setting name="walletPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="defaultFee" serializeAs="String">
+                <value>10</value>
+            </setting>
         </TurtleWallet.Properties.Settings>
     </userSettings>
 </configuration>
