--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="walletPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="defaultFee" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
